# smart-home-network

./: Cargo.toml  README.md  run-app.sh  thermometer.conf
src/: error.rs  home.rs  lib.rs  report.rs  room.rs
src/simulators/: mod.rs  socket.rs  thermometer.rs
src/smart_device/: device.rs  mod.rs  socket.rs  thermometer.rs
src/utils/: mod.rs  random.rs
tests/: integration_tests.rs
